<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Final Project</string>
    <string name="CBCnews">CBC</string>
    <string name="Movies">Movies</string>
    <string name="FoodNutrition">Nutrition</string>
    <string name="OCtranspo">OC Transpo</string>
    <string name="CourseCode">CST2355</string>
    <string name="OCTranspoEditText">select the bus stop</string>
    <string name="OCTranspoButton">search</string>
    <string name="cbc_menu_item_saved_news">Saved news</string>
    <string name="cbc_read_news_button_read_article">Read full article</string>
    <string name="cbc_read_news_button_save_news">Save news</string>
    <string name="cbc_read_news_toast_saved">Article saved</string>
    <string name="cbc_read_news_toast_deleted">Article deleted</string>
    <string name="cbc_read_news_button_delete_news">Delete</string>
    <string name="cbc_read_news_button_delete_news_after">Deleted</string>
    <string name="cbc_read_news_button_save_news_after">Saved</string>
    <string name="cbc_menu_item_help">Help</string>
    <string name="cbc_news_help_dialog_close">Close</string>
    <string name="cbc_news_delete_dialog_question">Are you sure you want to delete it?</string>
    <string name="cbc_news_help_dialog">
        This app gets all recent CBC news. You can save a news article and see your saved articles on the Save screen.
    </string>
    <string name="toastMovieSaved">Movie Saved</string>
    <string name="AboutFoodNutrition">activity version 1.0 by Ying Lu</string>
    <string name="HelpFoodNutrition">Type a food name then press to search</string>
    <string name="FoodNutritionSearchResult">Search Result:</string>
    <string name="FoodNutritionFoodName">Food Name:  </string>
    <string name="FoodNutritionCalories">Calories:  </string>
    <string name="FoodNutritionFat">Fat:   </string>
    <string name="FoodNutritionSaveButton">Save</string>
    <string name="FoodNutritionCancelButton">Cancel</string>
    <string name="FoodNutritionsSaveFavorites">View Favorites</string>
    <string name="FoodNutritionSearch">Search</string>
    <string name="FoodNutritionEnterFood">Enter the food name</string>
    <string name="AverageCal">AverageCal</string>
    <string name="Maximum">Maximum</string>
    <string name="Minimum">Minimum</string>
    <string name="TotalCal">TotalCal</string>
    <string name="XMLNoSavedMovies">No Movies Saved</string>
    <string name="noBuses">No buses found</string>
    <string name="hasBuses">%1s - %2s</string>
    <string name="ocQuery">query completed</string>
    <string name="questionCBC">accept will take you to CBCNews main page</string>
    <string name="CBCTitle">go to CBCNews main page?</string>
    <string name="questionMovies">accept will take you to Movies main page</string>
    <string name="questionSavedMovies">Do you want to see  saved Movies?</string>
    <string name="MoviesTitle">go to Movies main page?</string>
    <string name="aboutMovieInformation">Movie Information Version 1.0 by Mary Anne Bernardino</string>
    <string name="helpTitleMovieInformation">Movie Information Help</string>
    <string name="helpMovieInformation">To begin looking for a movie, type the name of the movie into the textbox and click the search button</string>
    <string name="toastRemovedMovie">Filme removed</string>
    <string name="XMLsaveThisMovie">Save This Movie</string>
    <string name="XMLsearchMovie">Search for Movie"</string>
    <string name="XMLInputTitle">Please enter a movie title</string>
    <string name="questionOCTranspo">accept will take you to OCTranspo main page</string>
    <string name="OCTranspoTitle">go to OCTranspo main page?</string>
    <string name="questionNutrition">accept will take you to Nutrition main page</string>
    <string name="NutritionTitle">go to Nutrition main page?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="OCTranspoAbout">activity version 1.0 by Gabriel Maia</string>
    <string name="OCTranspoHelp">OCTranspo guide</string>
    <string name="OCTranspoHelpGuide">- To look for a bus stop, simply type the bus stop and press to search \n"
                        "\n - To save a bus, select the bus you desire, and click on the save option</string>
    <string name="OCTranspoBusStopAndName">stop number and "name"</string>
    <string name="OCTranspoSavedBusMovePage">accept will take you to your saved buses page</string>
    <string name="OCTranspoSavedBusList">saved on your bus list </string>
    <string name="OCTranspoSpeed">%1s km/h</string>
    <string name="OCTranspoLatitude">N %1s</string>
    <string name="OCTranspoLongitude">W %1s</string>
    <string name="OCTranspoStartTime">Trip start time %1s</string>
    <string name="OCTranspoDelayedTime">Delayed %1s min(s)</string>
    <string name="OCTranspoBusHeading">Route Heading</string>
    <string name="OCTranspoBusNo">Bus No</string>
    <string name="OCTranspoLatitudeString">Latitude</string>
    <string name="OCTranspoLongitudeString">Longitude</string>
    <string name="OCTranspoDestinationString">Destination</string>
    <string name="OCTranspoSpeedString">Speed</string>
    <string name="OCTranspoStartString">Start Time</string>
    <string name="OCTranspoDelayedString">Delayed Time</string>
    <string name="OCTranspoSaveString">Press the button to save the route</string>
    <string name="titleMovie">Title: %1s</string>
    <string name="year">Release Date: %1s</string>
    <string name="Rated">Rated: %1s</string>
    <string name="Runtime">Runtime: %1s</string>
    <string name="Actors">Actors: %1s</string>
    <string name="Plot">Plot: %1s</string>
    <string name="cbc_news_item_menu_about">About</string>
    <string name="item_menu_about">About</string>
    <string name="item_menu_help">Help</string>
    <string name="cbc_news_main_about_toast">Version 1.0 by Natalia Nunes</string>
    <string name="remove">remove</string>
    <string name="averagedelayedtime">the average delayed time for this line is: %1s min(s)</string>
    <string name="movieInfoToast">Cannot Find That Movie</string>
    <string name="movieSearchedSnackBar">All Movies Searched</string>

</resources>
