<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/CourseCode" />

    <Button
        android:id="@+id/foodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@id/textView"
        android:text="@string/FoodNutrition" />

    <Button
        android:id="@+id/CBCbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/CBCnews" />

    <Button
        android:id="@+id/movieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foodButton"
        android:layout_toStartOf="@id/textView"
        android:text="@string/Movies" />

    <Button
        android:id="@+id/OCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CBCbutton"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/OCtranspo" />

</RelativeLayout>