<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_movie"
        android:title="Movies"
        android:icon="@drawable/movies_toolbar_icon"
        android:orderInCategory="5"
        app:showAsAction="always" />

    <item android:id="@+id/action_bus"
        android:title="Buses"
        android:icon="@drawable/octranspo_toolbar_icon"
        android:orderInCategory="4"
        app:showAsAction="always" />

    <item android:id="@+id/action_food"
        android:title="Food"
        android:icon="@drawable/nutrition_toolbar_icon"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/cbc_action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/cbc_menu_item_saved_news"
        android:orderInCategory="2"
        app:showAsAction="always"
        />

    <item android:id="@+id/cbc_action_help"
        android:title="@string/cbc_menu_item_help"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item android:id="@+id/cbc_action_about"
        android:title="@string/cbc_news_item_menu_about"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

</menu>