<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CBCNews.CBCReadNewsActivity">

    <android.support.v7.widget.Toolbar
        android:theme="@style/cbc_appbar"
        android:id="@+id/cbc_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:titleTextColor="@color/colorTextLight"/>

    <TextView
        android:id="@+id/cbc_textview_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/cbc_toolbar" />

    <Button
        android:id="@+id/cbc_button_open_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbc_read_news_button_read_article"
        app:layout_constraintTop_toBottomOf="@+id/cbc_textview_news_title"
        />

    <Button
        android:id="@+id/cbc_button_delete_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cbc_read_news_button_delete_news"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cbc_webview_news_body" />

    <Button
        android:id="@+id/cbc_button_save_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cbc_read_news_button_save_news"
        app:layout_constraintTop_toBottomOf="@+id/cbc_button_open_news"
        />

    <WebView
        android:id="@+id/cbc_webview_news_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cbc_button_save_news"
         />


</android.support.constraint.ConstraintLayout>