<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".FoodNutrition.FoodNutritionMain">


    <android.support.v7.widget.Toolbar
        android:id="@+id/nutritionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/nutritionListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nutritionButton"
        >

    </ListView>

    <Button
        android:id="@+id/nutritionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="171dp"
        android:text="@string/FoodNutritionSearch" />

    <Button
        android:id="@+id/FavouriteFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nutritionButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:text="@string/FoodNutritionsSaveFavorites" />

    <TextView
        android:id="@+id/nutritionPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/FoodNutritionEnterFood" />


    <EditText
        android:id="@+id/nutritionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        />


    <ProgressBar
        android:id="@+id/nutritionProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:visibility="visible" />




</RelativeLayout>